--- a/src/Extensions/ViewFaceCore.Extension.DependencyInjection/ViewFaceCore.Extension.DependencyInjection.csproj
+++ b/src/Extensions/ViewFaceCore.Extension.DependencyInjection/ViewFaceCore.Extension.DependencyInjection.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<Authors>WithSalt</Authors>
-		<Version>0.3.7</Version>
+		<Version>0.4.0-alpha1</Version>
 		<OutputType>Library</OutputType>
 		<LangVersion>latest</LangVersion>
 		<Platforms>AnyCPU;x64;x86</Platforms>
